--- a/GouGou-Live/Classes/LIve/Views/RecommendView/LiveTableView/LiveViewCell.xib
+++ b/GouGou-Live/Classes/LIve/Views/RecommendView/LiveTableView/LiveViewCell.xib
@@ -19,33 +19,33 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oQg-NJ-ho3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="主播头像" translatesAutoresizingMaskIntoConstraints="NO" id="4wv-5f-ASs">
-                                <rect key="frame" x="10" y="8" width="29" height="29"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="主播头像" translatesAutoresizingMaskIntoConstraints="NO" id="4wv-5f-ASs">
+                                <rect key="frame" x="10" y="7" width="30" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="opM-o0-5GK"/>
                                     <constraint firstAttribute="width" constant="30" id="xYv-Cy-eKU"/>
                                 </constraints>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="定位" translatesAutoresizingMaskIntoConstraints="NO" id="cHv-LB-W2o">
-                                <rect key="frame" x="49" y="23" width="16" height="19"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="定位" translatesAutoresizingMaskIntoConstraints="NO" id="cHv-LB-W2o">
+                                <rect key="frame" x="50" y="23" width="16" height="19"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="北京" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Dk-vy-yB2">
-                                <rect key="frame" x="70" y="25" width="24" height="15"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="北京" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Dk-vy-yB2">
+                                <rect key="frame" x="71" y="25" width="24" height="15"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="小联系人（辅助）" translatesAutoresizingMaskIntoConstraints="NO" id="Iif-XZ-Y5h">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="小联系人（辅助）" translatesAutoresizingMaskIntoConstraints="NO" id="Iif-XZ-Y5h">
                                 <rect key="frame" x="309" y="28" width="9" height="10"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="10000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iYn-9X-pW2">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iYn-9X-pW2">
                                 <rect key="frame" x="323" y="24" width="42" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" red="1" green="0.59999999999999998" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="慧摩尔" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0G7-Fa-fRX">
-                                <rect key="frame" x="49" y="5" width="42" height="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="慧摩尔" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0G7-Fa-fRX">
+                                <rect key="frame" x="50" y="4" width="42" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -62,6 +62,7 @@
                             <constraint firstItem="0G7-Fa-fRX" firstAttribute="leading" secondItem="4wv-5f-ASs" secondAttribute="trailing" constant="10" id="KYY-vZ-lMC"/>
                             <constraint firstAttribute="height" constant="44" id="Kjg-6w-C08"/>
                             <constraint firstItem="4wv-5f-ASs" firstAttribute="centerY" secondItem="oQg-NJ-ho3" secondAttribute="centerY" id="Kwi-GQ-kxQ"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="44" id="XZq-Sw-Woo"/>
                             <constraint firstItem="Iif-XZ-Y5h" firstAttribute="centerY" secondItem="iYn-9X-pW2" secondAttribute="centerY" id="hgZ-Hd-X78"/>
                             <constraint firstItem="iYn-9X-pW2" firstAttribute="centerY" secondItem="cHv-LB-W2o" secondAttribute="centerY" id="usK-2P-ZsN"/>
                             <constraint firstItem="7Dk-vy-yB2" firstAttribute="leading" secondItem="cHv-LB-W2o" secondAttribute="trailing" constant="5" id="wOf-IO-qoc"/>
@@ -72,7 +73,13 @@
                         <constraints>
                             <constraint firstAttribute="height" constant="200" id="UKT-uK-dst"/>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="200" id="pSx-CT-Aq3"/>
+                            <constraint firstAttribute="height" relation="lessThanOrEqual" constant="200" id="yYz-MV-Wqw"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="UKT-uK-dst"/>
+                            </mask>
+                        </variation>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="直播中" translatesAutoresizingMaskIntoConstraints="NO" id="mz9-C8-9Pf">
                         <rect key="frame" x="316" y="54" width="49" height="17"/>
@@ -80,6 +87,14 @@
                     <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VrR-9q-xAd">
                         <rect key="frame" x="0.0" y="244" width="375" height="118"/>
                         <color key="backgroundColor" red="0.8784313725490196" green="0.8784313725490196" blue="0.8784313725490196" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="118" id="VVr-Z6-FDM"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="VVr-Z6-FDM"/>
+                            </mask>
+                        </variation>
                     </scrollView>
                     <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CFE-qk-BsY">
                         <rect key="frame" x="0.0" y="224" width="375" height="20"/>
@@ -136,7 +151,7 @@
                 <outlet property="roomMessageLabel" destination="GaA-2j-YOu" id="g0g-Go-0jo"/>
                 <outlet property="watchCountLabel" destination="iYn-9X-pW2" id="BJT-dw-7we"/>
             </connections>
-            <point key="canvasLocation" x="496.5" y="-342.5"/>
+            <point key="canvasLocation" x="420.5" y="-385.5"/>
         </tableViewCell>
     </objects>
     <resources>
