--- a/GouGou-Live/Classes/Login/Controllers/ForgetPsd/ForgetPsdViewController.xib
+++ b/GouGou-Live/Classes/Login/Controllers/ForgetPsd/ForgetPsdViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1912" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ForgetPsdViewController">
@@ -19,17 +19,21 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="仅支持中国大陆手机号" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Pdf-vv-bYM">
-                    <rect key="frame" x="59" y="20" width="217" height="30"/>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="仅支持中国大陆手机号" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Pdf-vv-bYM">
+                    <rect key="frame" x="55" y="20" width="210" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="2I9-VH-ZcX"/>
+                        <constraint firstAttribute="width" constant="210" id="7w2-e0-o3n"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
                 </textField>
-                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eym-5C-p3E">
-                    <rect key="frame" x="286" y="21" width="74" height="29"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eym-5C-p3E">
+                    <rect key="frame" x="275" y="21" width="85" height="29"/>
                     <color key="backgroundColor" red="0.59999999999999998" green="0.80000000000000004" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="85" id="7NE-vy-MvT"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <state key="normal" title="获取验证码">
                         <color key="titleColor" red="0.99607843137254903" green="0.99607843137254903" blue="0.99607843137254903" alpha="1" colorSpace="calibratedRGB"/>
@@ -39,17 +43,18 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dI4-Lp-yQV">
-                    <rect key="frame" x="20" y="60" width="340" height="2"/>
+                    <rect key="frame" x="0.0" y="60" width="375" height="1"/>
                     <color key="backgroundColor" white="0.75" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="2" id="81E-Gp-Zg1"/>
+                        <constraint firstAttribute="height" constant="1" id="81E-Gp-Zg1"/>
+                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="1" id="BBL-Mi-YT0"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入验证码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KJJ-mh-iYa">
-                    <rect key="frame" x="59" y="82" width="257" height="30"/>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入验证码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KJJ-mh-iYa">
+                    <rect key="frame" x="55" y="81" width="265" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="i9w-Xi-Msh"/>
                     </constraints>
@@ -60,7 +65,7 @@
                     </connections>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ViO-Lm-eLC">
-                    <rect key="frame" x="40" y="144" width="294" height="40"/>
+                    <rect key="frame" x="40" y="142" width="294" height="40"/>
                     <color key="backgroundColor" red="0.59999999999999998" green="0.80000000000000004" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="hgQ-Ad-4Ds"/>
@@ -74,46 +79,44 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uwf-cE-gFQ">
-                    <rect key="frame" x="0.0" y="122" width="375" height="2"/>
+                    <rect key="frame" x="0.0" y="121" width="375" height="1"/>
                     <color key="backgroundColor" white="0.75" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="2" id="rCM-yv-t73"/>
+                        <constraint firstAttribute="height" constant="1" id="rCM-yv-t73"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="iconfont-dianhua" translatesAutoresizingMaskIntoConstraints="NO" id="Q7M-TV-Dr4">
-                    <rect key="frame" x="20" y="26" width="18" height="18"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconfont-dianhua" translatesAutoresizingMaskIntoConstraints="NO" id="Q7M-TV-Dr4">
+                    <rect key="frame" x="17" y="26" width="18" height="18"/>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="验证码蓝" translatesAutoresizingMaskIntoConstraints="NO" id="NcZ-ED-Pao">
-                    <rect key="frame" x="20" y="87" width="16" height="20"/>
+                    <rect key="frame" x="20" y="86" width="16" height="20"/>
                 </imageView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="Pdf-vv-bYM" firstAttribute="leading" secondItem="Q7M-TV-Dr4" secondAttribute="trailing" constant="21" id="218-bL-EU1"/>
+                <constraint firstItem="Pdf-vv-bYM" firstAttribute="leading" secondItem="Q7M-TV-Dr4" secondAttribute="trailing" constant="20" id="218-bL-EU1"/>
                 <constraint firstItem="ViO-Lm-eLC" firstAttribute="top" secondItem="Uwf-cE-gFQ" secondAttribute="bottom" constant="20" id="2fY-hh-d5L"/>
                 <constraint firstItem="Uwf-cE-gFQ" firstAttribute="top" secondItem="NcZ-ED-Pao" secondAttribute="bottom" constant="15" id="2vc-gL-Oo7"/>
                 <constraint firstItem="dI4-Lp-yQV" firstAttribute="top" secondItem="eym-5C-p3E" secondAttribute="bottom" constant="10" id="5g0-Ey-HZA"/>
                 <constraint firstItem="eym-5C-p3E" firstAttribute="leading" secondItem="Pdf-vv-bYM" secondAttribute="trailing" constant="10" id="6HA-GU-sIr"/>
                 <constraint firstAttribute="trailing" secondItem="Uwf-cE-gFQ" secondAttribute="trailing" id="9Ka-zz-zoG"/>
                 <constraint firstItem="Pdf-vv-bYM" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="DTA-lI-5Px"/>
+                <constraint firstItem="dI4-Lp-yQV" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="GNj-KH-fdO"/>
                 <constraint firstItem="KJJ-mh-iYa" firstAttribute="leading" secondItem="Pdf-vv-bYM" secondAttribute="leading" id="J4N-3J-ThC"/>
-                <constraint firstItem="dI4-Lp-yQV" firstAttribute="leading" secondItem="Q7M-TV-Dr4" secondAttribute="leading" id="Ket-LY-Ykp"/>
                 <constraint firstItem="NcZ-ED-Pao" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="LHb-Fx-vaF"/>
                 <constraint firstItem="Uwf-cE-gFQ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="LeP-Ho-VIH"/>
                 <constraint firstItem="ViO-Lm-eLC" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="O5m-DJ-N4G"/>
                 <constraint firstItem="eym-5C-p3E" firstAttribute="centerY" secondItem="Pdf-vv-bYM" secondAttribute="centerY" id="Q8X-m3-rqp"/>
                 <constraint firstItem="KJJ-mh-iYa" firstAttribute="top" secondItem="dI4-Lp-yQV" secondAttribute="bottom" constant="20" id="X6I-3c-dOf"/>
+                <constraint firstAttribute="trailing" secondItem="dI4-Lp-yQV" secondAttribute="trailing" id="fBl-3W-uRi"/>
                 <constraint firstItem="NcZ-ED-Pao" firstAttribute="centerY" secondItem="KJJ-mh-iYa" secondAttribute="centerY" id="hIX-AD-Dn2"/>
                 <constraint firstItem="KJJ-mh-iYa" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="mCC-bu-HuM"/>
-                <constraint firstItem="dI4-Lp-yQV" firstAttribute="trailing" secondItem="eym-5C-p3E" secondAttribute="trailing" id="nhg-X6-yeE"/>
                 <constraint firstItem="Q7M-TV-Dr4" firstAttribute="centerY" secondItem="Pdf-vv-bYM" secondAttribute="centerY" id="qfG-Xt-9QS"/>
                 <constraint firstAttribute="trailing" secondItem="eym-5C-p3E" secondAttribute="trailing" constant="15" id="xDd-8N-zRc"/>
                 <constraint firstItem="ViO-Lm-eLC" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="40" id="yQ1-1x-xXz"/>
-                <constraint firstItem="Pdf-vv-bYM" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" constant="-20" id="yee-SV-rZ8"/>
-                <constraint firstItem="Q7M-TV-Dr4" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="yp1-k9-W8t"/>
             </constraints>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
             <point key="canvasLocation" x="188.5" y="154.5"/>
