--- a/GouGou-Live/Classes/Me/Controllers/Account/Paying/PayingViewController.xib
+++ b/GouGou-Live/Classes/Me/Controllers/Account/Paying/PayingViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1912" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PayingViewController">
@@ -25,7 +25,7 @@
                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="我的（未点击）" translatesAutoresizingMaskIntoConstraints="NO" id="mjY-TA-ykG">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="我的（未点击）" translatesAutoresizingMaskIntoConstraints="NO" id="mjY-TA-ykG">
                     <rect key="frame" x="20" y="19" width="19" height="22"/>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YL3-Pv-L23">
@@ -37,13 +37,16 @@
                     </constraints>
                 </view>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="支付宝" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hkK-FV-1pK">
-                    <rect key="frame" x="59" y="76" width="201" height="20"/>
+                    <rect key="frame" x="60" y="76" width="190" height="20"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="190" id="7Xo-bN-Ur5"/>
+                    </constraints>
                     <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zrU-4f-Ikc">
-                    <rect key="frame" x="48" y="71" width="1" height="30"/>
+                    <rect key="frame" x="49" y="71" width="1" height="30"/>
                     <color key="backgroundColor" red="0.8784313725490196" green="0.8784313725490196" blue="0.8784313725490196" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="1" id="Cmc-pm-daR"/>
@@ -58,7 +61,7 @@
                     </constraints>
                 </view>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="组-5" translatesAutoresizingMaskIntoConstraints="NO" id="CbA-Cx-WFL">
-                    <rect key="frame" x="21" y="78" width="17" height="17"/>
+                    <rect key="frame" x="22" y="78" width="17" height="17"/>
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xhr-t7-FW9">
                     <rect key="frame" x="40" y="127" width="295" height="44"/>
@@ -88,9 +91,9 @@
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="支付宝号不能为空" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v8S-jH-3mR">
-                    <rect key="frame" x="265" y="81" width="100" height="15"/>
+                    <rect key="frame" x="255" y="81" width="110" height="15"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="100" id="3ja-IB-ZYV"/>
+                        <constraint firstAttribute="width" constant="110" id="3ja-IB-ZYV"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <color key="textColor" red="1" green="0.63137254901960782" blue="0.10196078431372549" alpha="1" colorSpace="calibratedRGB"/>
@@ -115,7 +118,6 @@
                 <constraint firstItem="GVC-6b-LCG" firstAttribute="top" secondItem="KSS-ay-6W6" secondAttribute="bottom" constant="15" id="NTQ-ox-eIB"/>
                 <constraint firstItem="KSS-ay-6W6" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="15" id="Nqk-Wn-2XD"/>
                 <constraint firstItem="Ter-0I-30j" firstAttribute="top" secondItem="hkK-FV-1pK" secondAttribute="bottom" constant="15" id="TMa-Y5-4g6"/>
-                <constraint firstItem="hkK-FV-1pK" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" constant="-28" id="Voc-lT-RjV"/>
                 <constraint firstAttribute="trailing" secondItem="Ter-0I-30j" secondAttribute="trailing" constant="10" id="cL7-QC-bRW"/>
                 <constraint firstAttribute="trailing" secondItem="GVC-6b-LCG" secondAttribute="trailing" constant="10" id="fFF-bE-vFS"/>
                 <constraint firstItem="YL3-Pv-L23" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="15" id="fHi-Lw-fzi"/>
